# emupico

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  shell.nix
include/: dummy.h  funcs.h
src/: dummy.cpp  dummy.rs  funcs.cpp  lib.rs  main.cpp  main.rs  palette.rs  rom.rs  vm.rs
src/funcs/: dummy.rs  mod.rs
